# rustack

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  _typos.toml  action.yml
.chats/: 20260226.md  20260227.md  20260228.md  20260301.md  20260302.md
.github/workflows/: apigatewayv2-test.yml  cloudwatch-test.yml  dynamodb-test.yml  dynamodbstreams-test.yml  events-test.yml  iam-test.yml  integration.yml  kinesis-test.yml  kms-test.yml  lambda-test.yml  logs-test.yml  nightly.yml  pulumi-test.yml  release-docker.yml  s3-test.yml  secretsmanager-test.yml  ses-test.yml  sns-test.yml  sqs-test.yml  ssm-test.yml  sts-test.yml  test-action.yml
apps/rustack/: Cargo.toml
apps/ruststack-server/: Cargo.toml
codegen/: Cargo.toml
codegen/services/: dynamodbstreams.toml  events.toml  ssm.toml  sts.toml
codegen/smithy-model/: events.json  sts.json
codegen/src/: codegen.rs  config.rs  main.rs  model.rs  shapes.rs
crates/rustack-apigatewayv2-core/: Cargo.toml
crates/rustack-apigatewayv2-http/: Cargo.toml
crates/rustack-auth/: Cargo.toml
crates/rustack-cloudfront-core/: Cargo.toml
crates/rustack-cloudfront-core/src/: arn.rs  config.rs  id_gen.rs  lib.rs  managed.rs  provider.rs  store.rs
crates/rustack-cloudfront-dataplane/: Cargo.toml
crates/rustack-cloudfront-http/: Cargo.toml
crates/rustack-cloudfront-model/: Cargo.toml
crates/rustack-cloudfront-model/src/: error.rs  ids.rs  lib.rs  tags.rs  types.rs
crates/rustack-cloudwatch-core/: Cargo.toml
crates/rustack-cloudwatch-http/: Cargo.toml
crates/rustack-dynamodb-core/: Cargo.toml
crates/rustack-dynamodb-http/: Cargo.toml
crates/rustack-dynamodbstreams-core/: Cargo.toml
crates/rustack-dynamodbstreams-http/: Cargo.toml
crates/rustack-events-core/: Cargo.toml
crates/rustack-events-http/: Cargo.toml
crates/rustack-iam-core/: Cargo.toml
crates/rustack-iam-http/: Cargo.toml
crates/rustack-kinesis-core/: Cargo.toml
crates/rustack-kinesis-http/: Cargo.toml
crates/rustack-kms-core/: Cargo.toml
crates/rustack-kms-http/: Cargo.toml
crates/rustack-lambda-core/: Cargo.toml
crates/rustack-lambda-http/: Cargo.toml
crates/rustack-logs-core/: Cargo.toml
crates/rustack-logs-http/: Cargo.toml
crates/rustack-s3-core/: Cargo.toml
crates/rustack-s3-http/: Cargo.toml
crates/rustack-s3-model/: Cargo.toml
crates/rustack-secretsmanager-core/: Cargo.toml
crates/rustack-secretsmanager-http/: Cargo.toml
crates/rustack-ses-core/: Cargo.toml
crates/rustack-ses-http/: Cargo.toml
crates/rustack-sns-core/: Cargo.toml
crates/rustack-sns-http/: Cargo.toml
crates/rustack-sqs-core/: Cargo.toml
crates/rustack-sqs-http/: Cargo.toml
crates/rustack-ssm-core/: Cargo.toml
crates/rustack-ssm-http/: Cargo.toml
crates/rustack-sts-core/: Cargo.toml
crates/rustack-sts-http/: Cargo.toml
crates/ruststack-dynamodbstreams-core/: Cargo.toml
crates/ruststack-dynamodbstreams-core/src/: emitter.rs  handler.rs  iterator.rs  lib.rs  provider.rs  storage.rs
crates/ruststack-dynamodbstreams-http/: Cargo.toml
crates/ruststack-dynamodbstreams-model/: Cargo.toml
crates/ruststack-events-core/: Cargo.toml
crates/ruststack-events-core/src/: config.rs  handler.rs  lib.rs  provider.rs
crates/ruststack-events-core/src/pattern/: engine.rs  operators.rs  parser.rs
crates/ruststack-events-http/: Cargo.toml
crates/ruststack-events-model/: Cargo.toml
crates/ruststack-events-model/src/: error.rs  lib.rs  operations.rs  output.rs
crates/ruststack-kinesis-core/: Cargo.toml
crates/ruststack-kinesis-http/: Cargo.toml
crates/ruststack-kinesis-model/: Cargo.toml
crates/ruststack-kms-core/: Cargo.toml
crates/ruststack-kms-core/src/: ciphertext.rs  crypto.rs  handler.rs  key.rs  lib.rs  provider.rs  resolve.rs  state.rs  validation.rs
crates/ruststack-kms-http/: Cargo.toml
crates/ruststack-kms-model/: Cargo.toml
crates/ruststack-lambda-core/: Cargo.toml
crates/ruststack-lambda-core/src/: config.rs  error.rs  handler.rs  lib.rs  provider.rs  resolver.rs  storage.rs
crates/ruststack-lambda-http/: Cargo.toml
crates/ruststack-lambda-http/src/: body.rs  dispatch.rs  lib.rs  response.rs  router.rs  service.rs
crates/ruststack-lambda-model/: Cargo.toml
crates/ruststack-s3-http/: Cargo.toml
crates/ruststack-secretsmanager-model/: Cargo.toml
crates/ruststack-sqs-model/: Cargo.toml
crates/ruststack-sqs-model/src/: error.rs  lib.rs
crates/ruststack-ssm-core/: Cargo.toml
crates/ruststack-ssm-http/: Cargo.toml
crates/ruststack-ssm-model/: Cargo.toml
crates/ruststack-sts-core/: Cargo.toml
crates/ruststack-sts-core/src/: handler.rs  keygen.rs  lib.rs  provider.rs  state.rs  validation.rs
crates/ruststack-sts-http/: Cargo.toml
crates/ruststack-sts-model/: Cargo.toml
docs/: index.md  pulumi.md
docs/research/: spike-cargo-lambda-runtime-execution.md  sqs-api-research.md  sqs-test-suites.md  ssm-parameter-store-research.md
scripts/: publish.sh  pulumi-rustack-smoke.sh
specs/: README.md  rustack-cloudfront-dataplane-design.md  rustack-cloudfront-design.md  ruststack-apigatewayv2-design.md  ruststack-cloudwatch-design.md  ruststack-dynamodbstreams-design.md  ruststack-events-design.md  ruststack-iam-design.md  ruststack-kinesis-design.md  ruststack-kms-design.md  ruststack-lambda-design.md  ruststack-lambda-squib-runtime-design.md  ruststack-logs-design.md  ruststack-pulumi-hackathon-app.md  ruststack-pulumi-target-design.md  ruststack-secretsmanager-design.md  ruststack-ses-design.md  ruststack-snapshot-binary-archive-design.md  ruststack-snapshot-design.md  ruststack-snapshot-impl-plan.md  ruststack-snapshot-prd.md  ruststack-snapshot-verification-plan.md  ruststack-sns-design.md  ruststack-sqs-design.md  ruststack-ssm-design.md  ruststack-sts-design.md  s3-checksum-parity-design.md
specs/fixes/: sqs-longpoll-dashmap-safety.md
tests/dynamodb-compat/: conftest.py  setup.sh  util.py
tests/integration/: Cargo.toml
tests/lambda-compat/: conftest.py  (+10 more)
tools/lambda-squib-agent/: Cargo.toml
tools/lambda-squib-agent/src/: main.rs
(+248 files in other folders)
