[package]
name = "rustack-cloudfront-model"
description = "CloudFront type model for Rustack"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
quick-xml = { workspace = true }
