[package]
name = "ruststack-events-core"
description = "EventBridge business logic for RustStack"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
ruststack-core = { workspace = true }
ruststack-events-model = { workspace = true }
ruststack-events-http = { workspace = true }
ruststack-auth = { workspace = true }
http = { workspace = true }

async-trait = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
ipnet = "2.12"
