[package]
name = "ruststack-events-model"
description = "EventBridge model types for RustStack"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
