[package]
name = "ruststack-kms-core"
description = "KMS business logic for RustStack"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
ruststack-core = { workspace = true }
ruststack-kms-model = { workspace = true }
ruststack-kms-http = { workspace = true }
ruststack-auth = { workspace = true }
http = { workspace = true }

aws-lc-rs = "1"
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
