[package]
name = "ruststack-sqs-model"
description = "SQS model types for RustStack"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
base64 = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
