[package]
name = "ruststack-sts-core"
description = "STS business logic for RustStack"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
ruststack-core = { workspace = true }
ruststack-sts-model = { workspace = true }
ruststack-sts-http = { workspace = true }
http = { workspace = true }

dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
