[package]
name = "rustack-lambda-squib-agent"
description = "In-guest Lambda runtime agent for Rustack Squib microVMs"
version = "0.9.0"
edition = "2024"
license = "MIT"
publish = false

[lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"
unsafe_code = "forbid"

[dependencies]
anyhow = "1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-vsock = "0.7.2"
uuid = { version = "1", features = ["v4"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
